--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^2.1.0
   firebase_core: ^1.7.0
   google_sign_in: ^5.1.1
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
