--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^1.7.0
   google_sign_in: ^5.1.1
   shared_preferences: ^2.0.8
+  google_ml_kit: ^0.7.2
+  camera: ^0.9.4+1
+  image_picker: ^0.8.4+2
 
 dev_dependencies:
   flutter_test:
