--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   camera: ^0.9.4+1
   image_picker: ^0.8.4+2
   font_awesome_flutter: ^9.1.0
+  flutter_masked_text2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
